<resources>
    <string name="app_name">Panther Park</string>
    <string name="title_activity_confirm_code">ConfirmCodeActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up"><u>Don’t have an account? Sign up!</u></string>
    <string name="change_password"><u>Change password...</u></string>
    <string name="enter_parking_lot_id">Enter Parking Lot ID</string>
    <string name="delete_parking_lot">Delete Parking Lot</string>
    <string name="parking_lot_name">Parking Lot Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="lot_status">Lot Status (Open/Closed)</string>
    <string name="add_parking_lot">Add Parking Lot</string>
    <string name="delete_parking_lot_button_description">Delete Parking Lot Button</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strings">Enter Parking Lot ID</string>
    <!-- Spinner for HomePage Destination Dropdown -->
    <string-array name="decks">
        <item>Select a Destination</item>
        <item>75 Piedmont Deck</item>
        <item>A Deck</item>
        <item>B Lot</item>
        <item>Blue Lot</item>
        <item>C Lot</item>
        <item>College of Law (V Lot)</item>
        <item>G Deck</item>
        <item>Green Lot</item>
        <item>I Lot</item>
        <item>K Deck</item>
        <item>M Deck</item>
        <item>N Deck</item>
        <item>S Deck</item>
        <item>T Deck</item>
        <item>U Lot</item>
        <item>W Lot</item>
    </string-array>
    <string-array name="destinations">
        <item> Select a Destination </item>
        <item>	Student Center West	</item>
        <item>	Classroom South	</item>
        <item>	Art and Humanities	</item>
        <item>	Langdale Hall	</item>
        <item>	Sports Arena	</item>
        <item>	Urban Life	</item>
        <item>	Courtland Building	</item>
        <item>	Courtland North Building	</item>
        <item>	College of Education	</item>
        <item>	Library South	</item>
        <item>	Dahlberg Hall	</item>
        <item>	One Park Place	</item>
        <item>	Natural Science Center	</item>
        <item>	University Bookstore Building	</item>
        <item>	J. Mack Robinson College of Business	</item>
        <item>	Science Annex	</item>
        <item>	Rialto Theatre	</item>
        <item>	Haas-Howell	</item>
        <item>	Standard Building	</item>
        <item>	Student Center	</item>
        <item>	Student Recreation Center	</item>
        <item>	H.M. Aderhold Learning Center	</item>
        <item>	University Lofts	</item>
        <item>	Petit Science Center	</item>
        <item>	University Commons	</item>
        <item>	25 Park Place (Suntrust Tower)	</item>
        <item>	75 Piedmont Ave (Citizens Trust)	</item>
        <item>	Patton Hall	</item>
        <item>	Special Interest Housing	</item>
        <item>	Athletic Training Facility	</item>
        <item>	Edgewood Sculpture Studio	</item>
        <item>	College of Law	</item>
        <item>	Centennial Hall	</item>
        <item>	Alumni Center	</item>
        <item>	40 Pryor Avenue	</item>
        <item>	55 Park Place Building	</item>
        <item>	Piedmont North	</item>
        <item>	Piedmont Central Residence Hall	</item>
        <item>	GSU Parc Stadium	</item>
        <item>	GSU Convocation Center	</item>
        <item>	Creative Media Industries Institute (CMII)	</item>
    </string-array>
</resources>